# hexadocu

./: CHANGELOG.md  hexadocu.cabal
app/: Board.hs  Main.hs
test/: Spec.hs  doctests.hs
